@@ -61,7 +61,7 @@ module Natour
                 track = Pathname(tmp_dir).join(gps_track.path).sub_ext('.gpx')
                 gps_track.save_gpx(track, overwrite: true)
                 filename = Pathname(gps_track.path).sub_ext('.jpg')
-                map.save_image(filename, overwrite: overwrite_map, tracks: [track], layers: map_layers)
+                map.save_image(filename, overwrite: overwrite_map, gps_files: [track], map_layers: map_layers)
                 Image.load_file(filename.to_s)
               end
             end
